font test fixed countdown on small screen

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,11 @@
 @import url(fontawesome-all.min.css);
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,300i,400i");
 
+@font-face {
+  font-family: 'LovelyMelody';
+  src: url('assets/webfonts/LovelyMelody.ttf');
+}
+
 /*
 	Ethereal by HTML5 UP
 	html5up.net | @ajlkn
@@ -526,11 +531,6 @@ input, select, textarea {
 		h6 {
 			font-size: 0.7rem;
 		}
-
-		h1 br, h2 br, h3 br, h4 br, h5 br, h6 br {
-			display: none;
-		}
-
 	}
 
 	@media screen and (max-width: 360px) {
@@ -865,6 +865,7 @@ input, select, textarea {
 		}
 		.timer.finished{
 			display: none;
+			margin-top: 4rem;
 		}
 
 		.icon:before {
@@ -1354,7 +1355,11 @@ input, select, textarea {
 					font-size: 1.75rem;
 				}
 
-				ul.grid-icons > li {
+				ul.grid-icons.four > li:nth-child(4) {
+					display: none;
+				}
+
+/*				ul.grid-icons > li {
 					margin: 1rem 0 0 1rem !important;
 				}
 
@@ -1364,7 +1369,7 @@ input, select, textarea {
 
 					ul.grid-icons > li:after {
 						display: none !important;
-					}
+					}*/
 
 		}
 
